# sushictfx

./: README.md  docker-compose.yaml
server/: Cargo.toml  Dockerfile
server/src/: main.rs
server/src/migrate/: teams.rs
server/src/models/: mod.rs  teams.rs
server/src/router/: default.rs  mod.rs  teams.rs
ui/: Dockerfile  README.md  package.json  pnpm-lock.yaml
ui/sample/: challenges.json
ui/src/app/: layout.module.scss  layout.tsx  page.tsx  types.ts
ui/src/app/challenges/: page.module.scss  page.tsx
ui/src/components/ChallengeCard/: ChallengeCard.module.scss  ChallengeCard.tsx
ui/src/pages/api/challenges/: index.ts
ui/src/styles/: _util.scss  globals.scss
