[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
mongodb = "2.6.0"
futures = "0.3"
serde = { version = "~1.0", features = ["derive"] }
serde_derive = { version="~1.0" }
serde_json = "~1.0"
mongodb-migrator = "0.1.8"
tokio ={ version = "1", features = ["full"] }
async-trait = "0.1.36"
bson = "2.6.0"
anyhow = "1.0"
rand = "0.8.5"